add AppCamp banner

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 		<div class="container">
 			<input type="search" placeholder="Find here what you need..." ng-model="search">
 		</div>
+
+		<a href="http://appcamp.io/?utm_campaign=Emerson%20Thompson%20Ads&utm_medium=Site%20Banner&utm_source=thompsonemerson.github.io/ionic-collection" class="appcamp" target="_blank">
+			<img src="images/appcamp-banner.png" alt="AppCamp - Learn mobile development 100% free">
+		</a>
 	</header>
 	
 	<main class="container">
