--- a/index.html
+++ b/index.html
@@ -2,16 +2,39 @@
 <html lang="en" ng-app="IonicCollectionApp">
 <head>
 	<meta charset="UTF-8">
+	<meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#4e8ef7">
+	<meta name="apple-mobile-web-app-status-bar-style" content="#4e8ef7">
+	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<title>Ionic Collection</title>
-	
+
+	<meta property="og:description" content="A collection of posts on ionic framework gathered in one place">
+	<meta property="og:image" content="http://thompsonemerson.github.io/ionic-collection/images/cover.jpg">
+	<meta property="og:site_name" content="Ionic Collection">
+	<meta property="og:title" content="Ionic Collection">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://thompsonemerson.github.io/ionic-collection/">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:domain" content="Ionic Collection">
+	<meta name="twitter:url" content="http://thompsonemerson.github.io/ionic-collection/">
+	<meta name="twitter:site" content="http://thompsonemerson.github.io/ionic-collection/">
+	<meta name="twitter:creator" content="Emerson Thompson">
+	<meta name="twitter:title" content="Ionic Collection">
+	<meta name="twitter:description" content="A collection of posts on ionic framework gathered in one place">
+	<meta name="twitter:image:src" content="http://thompsonemerson.github.io/ionic-collection/images/cover.jpg">
+
+	<link rel="canonical" href="http://thompsonemerson.github.io/ionic-collection/">
+	<link rel="image_src" href="http://thompsonemerson.github.io/ionic-collection/images/cover.jpg">
+	<link rel="icon" href="http://thompsonemerson.github.io/ionic-collection/images/favicon.png" type="image/png" />
+
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
 
 	<!--[if lt IE 9]>
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<![endif]-->
-	
+
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -22,7 +45,7 @@
 		ga('send', 'pageview');
 	</script>
 </head>
-<body ng-controller="AppCtrl">	
+<body ng-controller="AppCtrl">
 	<header>
 		<div class="container">
 			<input type="search" placeholder="Find here what you need..." ng-model="search">
@@ -32,7 +55,7 @@
 			<img src="images/appcamp-banner.png" alt="AppCamp - Learn mobile development 100% free">
 		</a>
 	</header>
-	
+
 	<main class="container">
 		<div class="list" ng-repeat="category in collection | filter: search">
 			<h2 class="title-category">{{ category.name }}</h2>
@@ -54,7 +77,7 @@
 			<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 		</div>
 	</div>
-	
+
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="scripts/app.js"></script>
 </body>
