--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
 	<title>Ionic Collection</title>
 
 	<meta property="og:description" content="A collection of posts on ionic framework gathered in one place">
-	<meta property="og:image" content="http://thompsonemerson.github.io/ionic-collection/images/cover.jpg">
+	<meta property="og:image" content="http://emersonthompson.com.br/ionic-collection/images/cover.jpg">
 	<meta property="og:site_name" content="Ionic Collection">
 	<meta property="og:title" content="Ionic Collection">
 	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://thompsonemerson.github.io/ionic-collection/">
+	<meta property="og:url" content="http://emersonthompson.com.br/ionic-collection/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:domain" content="Ionic Collection">
-	<meta name="twitter:url" content="http://thompsonemerson.github.io/ionic-collection/">
-	<meta name="twitter:site" content="http://thompsonemerson.github.io/ionic-collection/">
+	<meta name="twitter:url" content="http://emersonthompson.com.br/ionic-collection/">
+	<meta name="twitter:site" content="http://emersonthompson.com.br/ionic-collection/">
 	<meta name="twitter:creator" content="Emerson Thompson">
 	<meta name="twitter:title" content="Ionic Collection">
 	<meta name="twitter:description" content="A collection of posts on ionic framework gathered in one place">
-	<meta name="twitter:image:src" content="http://thompsonemerson.github.io/ionic-collection/images/cover.jpg">
+	<meta name="twitter:image:src" content="http://emersonthompson.com.br/ionic-collection/images/cover.jpg">
 
-	<link rel="canonical" href="http://thompsonemerson.github.io/ionic-collection/">
-	<link rel="image_src" href="http://thompsonemerson.github.io/ionic-collection/images/cover.jpg">
-	<link rel="icon" href="http://thompsonemerson.github.io/ionic-collection/images/favicon.png" type="image/png" />
+	<link rel="canonical" href="http://emersonthompson.com.br/ionic-collection/">
+	<link rel="image_src" href="http://emersonthompson.com.br/ionic-collection/images/cover.jpg">
+	<link rel="icon" href="http://emersonthompson.com.br/ionic-collection/images/favicon.png" type="image/png" />
 
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
