--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
     	<script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
 	<![endif]-->
 
+	<script src="bower_components/angular/angular.min.js"></script>
+
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -45,7 +47,7 @@
 		ga('send', 'pageview');
 	</script>
 </head>
-<body ng-controller="AppCtrl">
+<body ng-controller="AppCtrl" ng-cloak>
 	<header>
 		<div class="container">
 			<input type="search" placeholder="Find here what you need..." ng-model="search">
@@ -78,7 +80,6 @@
 		</div>
 	</div>
 
-	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="scripts/app.js"></script>
 </body>
 </html>
